2001-05-27  David Gravereaux <davygrvy@pobox.com>

	* configure:
	* configure.in:
	* Makefile.in:
		Added package versions to the compile flags. [bug #421246]

2001-04-28  David Gravereaux <davygrvy@pobox.com>

	* generic/threadCmd.c (NewThread): removed the previous addition of
	Tcl_FinalizeThread.  Tcl_ExitThread calls it anyways (my mistake).
	The resource leak was in the core.  See ->
	http://sourceforge.net/tracker/?func=detail&atid=110894&aid=419683&group_id=10894
	for the fix.  That patch is pending approval.

	To acheive the same behavior of emptying the event loop the way
	thread::wait used to work, use the following:
		set T [thread::create {thread::wait; update}]
		thread::send -async $T thread::unwind

	* generic/thread.h:
	* win/vc/makefile.vc:
	* win/vc/thread.rc:
	* win/vc/pkg.vc (new): Moved version numbers from the header file.  It isn't
	an export API or anything.  Moved version numbers to the build files.  I'll
	modify configure.in and makefile.in a little later.

2001-04-26  David Gravereaux <davygrvy@pobox.com>

	* config/* (new): old site-wide config directory re-added.

	* generic/threadCmd.c (ThreadEventProc): ThreadErrorProc now
	supported in asyncronous sends when Tcl_Eval returns other than
	TCL_OK.  Errors were silently ignored prior to this. Bug #219324

	==== INTERFACE CHANGE ====
	* generic/threadCmd.c:
	* generic/thread.h: thread::exit renamed to thread::unwind. The
	name of 'exit' is misleading.  An exit implies an unconditional
	return.  But there are conditions.  'unwind' describes with more
	clarity what's happening to the prior thread::wait.  For example:

	  # parent thread
	  set T [thread::create {source worker.tcl}]
	  ....
	  thread::send -async $T doStuff
	  ....
	  thread::send -async $T doStuff
	  ....
	  thread::send -async $T thread::unwind

	  # worker.tcl
	  proc init    {} {#do initialization}
	  proc cleanup {} {#do cleanup}
	  proc doStuff {} {#the work}
	  init
	  thread::wait
	  cleanup
